test/fail/M0228_2.mo
module {
  let _x = mixin() {};
}
